--- a/pipeline/deployspec.yml
+++ b/pipeline/deployspec.yml
@@ -23,7 +23,10 @@ phases:
 
   build:
     commands:
-      - cd $CODEBUILD_SRC_DIR/terraform-infrastructure/virgo4.lib.virginia.edu/ecs-tasks/staging/virgo4-doc-delete
+      - cd $CODEBUILD_SRC_DIR/terraform-infrastructure/virgo4.lib.virginia.edu/ecs-tasks/staging/virgo4-default-doc-delete
+      - terraform init
+      - terraform apply -auto-approve
+      - cd $CODEBUILD_SRC_DIR/terraform-infrastructure/virgo4.lib.virginia.edu/ecs-tasks/staging/virgo4-image-doc-delete
       - terraform init
       - terraform apply -auto-approve
 
