--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -10,8 +10,8 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      docker: 18
+#    runtime-versions:
+#      docker: 18
 #    commands:
 
   pre_build:
