More updates for latest build environment

--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -10,9 +10,10 @@ version: 0.2
 
 phases:
   install:
-#    runtime-versions:
+    runtime-versions:
+      golang: 1.14
 #      docker: 18
-#    commands:
+    commands:
 
   pre_build:
     commands:
