--- a/pipeline/buildspec.yml
+++ b/pipeline/buildspec.yml
@@ -17,6 +17,7 @@ phases:
 
   pre_build:
     commands:
+      - docker version
       - PASSWORD=$(aws ecr get-login-password --region $AWS_REGION)
       - docker login --username AWS --password $PASSWORD $CONTAINER_REGISTRY
       - BUILD_VERSION=$(date --date="@$(echo $CODEBUILD_START_TIME | cut -c1-10)" +"%Y%m%d%H%M%S")
